# TV_LT

./: README.md
sample_project/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
sample_project/components/captask/: CMakeLists.txt  captask.c  captask.h
sample_project/components/lvgl/: README.md
sample_project/components/lvgl/env_support/cmake/: esp.cmake
sample_project/components/lvgl/examples/porting/: lv_port_disp_template.c
sample_project/components/lvgl/examples/widgets/menu/: lv_example_menu_4.c
sample_project/components/lvgl/examples/widgets/table/: lv_example_table_2.c
sample_project/components/lvgl/src/extra/libs/gif/: lv_gif.c  lv_gif.h
sample_project/components/lvgl/src/widgets/: lv_dropdown.c
sample_project/components/lvgl_esp32_drivers-master/: lvgl_helpers.c  lvgl_helpers.h
sample_project/components/lvgl_esp32_drivers-master/lvgl_tft/: disp_spi.h  esp_lcd_backlight.c  st7789.c
sample_project/components/porting/: CMakeLists.txt  CST816.c  CST816.h  lv_port_disp_template.c  lv_port_indev_template.c  lv_task.c  lv_task.h  sdmcc.c  sdmcc.h
sample_project/components/socket/: CMakeLists.txt  espnow_example.h  espnow_example_main.c  http.c  http.h  sock.c  sock.h
sample_project/components/ui/: CMakeLists.txt  UI_S.c  UI_S.h  ui.c  ui.h  ui_helpers.c  ui_helpers.h
sample_project/main/: CMakeLists.txt  main.c
